--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     <nav>
       <ul>
         <li><i class="fas fa-home"></i> Home</li>
-        <li><i class="fas fa-user-alt"></i> Home</li>
-        <li><i class="fas fa-envelope"></i> Home</li>
+        <li><i class="fas fa-user-alt"></i> About</li>
+        <li><i class="fas fa-envelope"></i> Contact</li>
       </ul>
     </nav>
     <script src="script.js"></script>
